# zotero_summarizer

./: .gitignore  CLAUDE.md  EI_brief.txt  README.md  RESEARCHER_PLAN.md  RESEARCHER_REFACTOR_PLAN.md  ZOTERO_NATIVE_PLAN.md  cleanup_gemini_stores.py  debug_cache.py  example_project_overview.txt  example_research_brief.txt  example_tags.txt  main.py  pyproject.toml  question.txt  requirements.txt  research_report_3YNCRQHJ_20251105_141102.html  research_report_3YNCRQHJ_20251105_141725.html  research_report_3YNCRQHJ_20251105_143914.html  research_report_THZ4BI6T_20251105_154615.html  roadmap.md  summarize_prompt.txt
docs/claude/: commands.md  content-extraction.md  implementation-details.md  workflows.md
old/: extract_html.py
src/: CLAUDE.md  analyze_pdfs.py  llm_extractor.py  zotero_base.py  zotero_cache.py  zotero_diagnose.py  zr_build.py  zr_cache.py  zr_cleanup.py  zr_common.py  zr_export.py  zr_file_search.py  zr_init.py  zr_llm_client.py  zr_organize_sources.py  zr_prompts.py  zr_query.py  zr_vector_chunker.py  zr_vector_db.py  zr_vector_embeddings.py  zr_verify_metadata.py  zresearcher.py
zotero_summarizer/: analyze_pdfs.py  extract_html.py  llm_extractor.py  researcher.py  summarize_sources.py  zotero_base.py  zotero_diagnose.py  zr_build.py  zr_common.py  zr_llm_client.py  zr_prompts.py  zr_query.py  zresearcher.py
