[project]
name = "zotero-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "pyzotero>=1.7.3",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
