[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-summarizer"
version = "0.1.0"
description = "Research assistant for Zotero collections"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "markdown>=3.10",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyzotero>=1.7.3",
    "requests>=2.32.5",
    "sentence-transformers>=2.2.0",
    "trafilatura>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
zr = "src.zresearcher:main"
